--- a/taskbar.css
+++ b/taskbar.css
@@ -71,3 +71,10 @@
     left:0px;
     width:100%;
 }
+.barButton{
+    font-family: Verdana;
+    font-size: 15px;
+    text-decoration: none;
+    color: white;
+}
+
