--- a/tips.css
+++ b/tips.css
@@ -1,5 +1,6 @@
 .potato{
     position: absolute;
+    margin-top: 0px;
     width: 104px;
     height: 90px;
     float: left;
@@ -78,7 +79,8 @@
     color: white;
 }
 h3{
-    color: blue;
+    color: black;
     size: 50px;
+    margin-top: 100px;
 }
 
