--- a/workoutLog.css
+++ b/workoutLog.css
@@ -79,6 +79,8 @@
 }
 
 .listOfWorkouts{
-    padding-left: 45%;
-    padding-top: 18%;
+    font-family: Verdana;
+    padding-left: 31%;
+    padding-top: 13%;
+    font-size:xx-large;
 }
