--- a/tips.css
+++ b/tips.css
@@ -1,83 +1,3 @@
-.potato{
-    position: absolute;
-    margin-top: 0px;
-    width: 104px;
-    height: 90px;
-    float: left;
-    padding-left: 15%;
-}
-
-.div1{
-    float: left;
-    font-family: Verdana;
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: bolder;
-    color: white;
-
-    padding-left: 25%;
-    
-}
-
-.div2{
-    float: left;
-    font-family: Verdana;
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: bolder;
-    color: white;
-}
-
-.div3{
-    float: left;
-    font-family: Verdana;
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: bolder;
-    color: white;
-}
-
-.div4{
-    float: left;
-    font-family: Verdana;
-    font-size: 15px;
-    text-decoration: none;
-    letter-spacing: 1px;
-    padding-right: 30px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: bolder;
-    color: white;
-}
-.navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(63, 63, 202);
-    position:fixed;
-    top:20px;
-    left:0px;
-    width:100%;
-}
-.barButton{
-    font-family: Verdana;
-    font-size: 15px;
-    text-decoration: none;
-    color: white;
-}
 p{
     margin-left: 40 px
 }
@@ -85,10 +5,14 @@ body {
     font-family: Arial, sans-serif;
     text-align: left;
 }
-a {
-    margin-top: 50px;
+.bench_press {
+    margin-top: 100px;
     display: inline-block;
     color: #241616;
     text-decoration: none;
+    width: 300px;
+    height: 200px;
+    margin-left: -10px;
 }
+
 
