--- a/tips.css
+++ b/tips.css
@@ -25,5 +25,17 @@ body {
     height: 200px;
     margin-left: -10px;
 }
+.dumbbell_press{
+    margin-top: 0px;
+    display: inline-block;
+    color: #241616;
+    text-decoration: none;
+    width: 300px;
+    height: 200px;
+    margin-left: -10px; 
+}
+
+
+ 
 
 
