--- a/tips.css
+++ b/tips.css
@@ -6,7 +6,9 @@ body {
     text-align: left;
 }
 .bench_press {
-    margin-top: 100px;
+    position: absolute;
+    top: 100px;
+    left: 50px;
     display: inline-block;
     color: #241616;
     text-decoration: none;
@@ -17,6 +19,9 @@ body {
 
 
 .incline_bench{
+    position: absolute;
+    top: 100px;
+    left: 400px;
     margin-top: 0px;
     display: inline-block;
     color: #241616;
@@ -26,6 +31,9 @@ body {
     margin-left: -10px;
 }
 .dumbbell_press{
+    position: absolute;
+    top: 100px;
+    left: 750px;
     margin-top: 0px;
     display: inline-block;
     color: #241616;
@@ -34,6 +42,7 @@ body {
     height: 200px;
     margin-left: -10px; 
 }
+
 
 
  
