--- a/tips.css
+++ b/tips.css
@@ -8,12 +8,12 @@ body {
 .bench_press {
     position: absolute;
     top: 100px;
-    left: 50px;
+    left: 75px;
     display: inline-block;
     color: #241616;
     text-decoration: none;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     margin-left: -10px;
 }
 
@@ -21,25 +21,37 @@ body {
 .incline_bench{
     position: absolute;
     top: 100px;
-    left: 400px;
+    left: 450px;
     margin-top: 0px;
     display: inline-block;
     color: #241616;
     text-decoration: none;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
     margin-left: -10px;
 }
 .dumbbell_press{
     position: absolute;
     top: 100px;
-    left: 750px;
+    left: 875px;
     margin-top: 0px;
     display: inline-block;
     color: #241616;
     text-decoration: none;
-    width: 300px;
-    height: 200px;
+    width: 350px;
+    height: 250px;
+    margin-left: -10px; 
+}
+.lateral_raise{
+    position: absolute;
+    top: 400px;
+    left: 75px;
+    margin-top: 0px;
+    display: inline-block;
+    color: #241616;
+    text-decoration: none;
+    width: 350px;
+    height: 250px;
     margin-left: -10px; 
 }
 
