--- a/index.css
+++ b/index.css
@@ -5,15 +5,15 @@
 .word{
     font-family: Verdana;
     font-size: 15px;
-    margin-left: 90px;
+    /* margin-left: 90px;
     margin-right: 400px;
     padding-left: 20px;
-    background-color: rgb(243, 243, 243);
+    background-color: rgb(243, 243, 243); */
 }
 
 .images{
-    margin-left: 90px;
-    margin-right: 400px;
+    /* margin-left: 90px;
+    margin-right: 400px; */
     padding-left: 20px;
     background-color: rgb(243, 243, 243);
 }
@@ -21,14 +21,23 @@
 .welcome{
     margin-top: 120px;
     margin-left: 90px;
-    margin-right: 400px;
+    margin-right: 350px;
     padding-left: 50px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-family: Verdana;
-    font-size: 15px;
+    font-size: 30px;
     background-color: rgb(63, 63, 202);
     text-indent: 5px;
     color: white;
     
+}
+
+#bgbox{
+    background-color: rgb(243, 243, 243);
+    margin-left: 90px;
+    margin-right: 350px;
+    padding-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
