--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 .streakList {
-    display:inline
+    display:inline;
+    
 }
 
 .word{
@@ -20,8 +21,8 @@
 
 .welcome{
     margin-top: 120px;
-    margin-left: 90px;
-    margin-right: 350px;
+    margin-left: 40px;
+    margin-right: 400px;
     padding-left: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -33,11 +34,18 @@
     
 }
 
+
 #bgbox{
     background-color: rgb(243, 243, 243);
-    margin-left: 90px;
-    margin-right: 350px;
+    margin-left: 40px;
+    margin-right: 400px;
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+#goalbox{
+    float: right;
+    display: inline;
+    width: 300px;
 }
