--- a/sample1.css
+++ b/sample1.css
@@ -1,5 +1,5 @@
 .potato{
-    position: fixed;
+    position: absolute;
     width: 104px;
     height: 90px;
     top: 0px;
@@ -18,7 +18,7 @@
     padding-bottom: 10px;
     font-weight: bolder;
     color: white;
-
+    z-index: 100000;
     padding-left: 25%;
     
 }
@@ -34,6 +34,7 @@
     padding-bottom: 10px;
     font-weight: bolder;
     color: white;
+    z-index: 100000;
 }
 
 .div3{
@@ -47,6 +48,7 @@
     padding-bottom: 10px;
     font-weight: bolder;
     color: white;
+    z-index: 100000;
 }
 
 .div4{
@@ -60,6 +62,7 @@
     padding-bottom: 10px;
     font-weight: bolder;
     color: white;
+    z-index: 100000;
 }
 
 .div5{
@@ -102,7 +105,7 @@
 
 .titleBar{
     float: right;
-    padding-top: 22%;
+    padding-top: 13%;
     position: relative;
     padding-right: 20%;
 }
@@ -110,27 +113,39 @@
 .workoutFocus{
     float: left;
     padding-top: 30%;
-    padding-left: 25%;
+    padding-left: 29%;
     position:relative;
+    z-index: -1;
 }
 
 .reqReps{
     float:left;
     padding-top: 30%;
-    padding-left: 3%;
+    padding-left: 7%;
     position:absolute;
+    z-index: -1;
 }
 
 .reqWeight{
     position:absolute;
     float: left;
-    padding-left: 3%;
+    padding-left: 7%;
     padding-top: 13%;
+    z-index: -1;
 }
 
 .reqSets{
+    z-index: -1;
     padding-top: 13%;
-    padding-left: 25%;
+    padding-left: 29%;
     position:absolute;
     float:left
+    
+}
+
+.potat2{
+    position:fixed;
+    padding-top: 20%;
+    padding-left:24%;
+    z-index: -1;
 }
