--- a/index.css
+++ b/index.css
@@ -31,6 +31,8 @@
     background-color: rgb(63, 63, 202);
     text-indent: 5px;
     color: white;
+    border-radius: 10px;
+
     
 }
 
@@ -42,6 +44,8 @@
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
+    border-radius: 10px;
+
 }
 
 #goalbox{
@@ -50,18 +54,44 @@
     width: 300px;
 }
 .blue-box {
-    width: 200px; /* Set the width of the box */
-    height: 100px; /* Set the height of the box */
+    margin-top: 120px;
+    margin-left: 40px;
+    margin-right: 400px;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-family: Verdana;
+    font-size: 30px;
+    background-color: rgb(63, 63, 202);
+    color: white;
+    margin-top: 50%;
+    margin: 70%;
+    top: 50px;
+    width: 300px;
+    border-radius: 10px;
+    margin-top: 70px;
+    position:fixed;
+    font-weight: bold;
+    text-align: left;
+
+}
+ .box{
+    margin-top: 50%;
+    margin: 70%;
+    top: 50px;
+    
+    border-radius: 10px;
+    margin-top: 152px;
+    position:fixed;
+    font-weight: bold;
+    text-align: left;
+    width: 310px; /* Set the width of the box */
+    height: 310px; /* Set the height of the box */
     background-color: rgb(63, 63, 202); /* Set the background color to blue */
     color: white; /* Set the text color to white */
     text-align: center; /* Center the text horizontally */
     line-height: 100px; /* Center the text vertically */
-    width: 300px;
-    margin-top: 50%;
-    margin: 70%;
-    background-color: rgb(63, 63, 202);
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 70px;
-    position:fixed;
 }
+
+
+
