--- a/tips.css
+++ b/tips.css
@@ -16,13 +16,11 @@ body {
     height: 250px;
     margin-left: -10px;
     border-radius: 10px;
-    border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: filter 0.3s ease;
 
 }
 .bench_press:hover{
-    color: blue;
     filter: brightness(80%);
 }
 
@@ -39,7 +37,11 @@ body {
     height: 250px;
     margin-left: -10px;
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.incline_bench:hover{
+    filter: brightness(80%);
 }
 .dumbbell_press{
     position: absolute;
@@ -53,7 +55,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.dumbbell_press:hover{
+    filter: brightness(80%);
 }
 .lateral_raise{
     position: absolute;
@@ -67,7 +73,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.lateral_raise:hover{
+    filter: brightness(80%);
 }
 .overhead_extension{
     position: absolute;
@@ -81,7 +91,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.overhead_extension:hover{
+    filter: brightness(80%);
 }
 .pullups{
     position: absolute;
@@ -95,7 +109,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.pullups:hover{
+    filter: brightness(80%);
 }
 .front_squat{
     position: absolute;
@@ -109,7 +127,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.front_squat:hover{
+    filter: brightness(80%);
 }
 .hamstring{
     position: absolute;
@@ -123,7 +145,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
-
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.hamstring:hover{
+    filter: brightness(80%);
 }
 .deadlift{
     position: absolute;
@@ -137,6 +163,11 @@ body {
     height: 250px;
     margin-left: -10px; 
     border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: filter 0.3s ease;
+}
+.deadlift:hover{
+    filter: brightness(80%);
 
 }
 .benchpresstext{
