--- a/workoutLog.css
+++ b/workoutLog.css
@@ -81,19 +81,40 @@
 
 
 .listOfWorkouts{
+    margin-left: 15%;
+    margin-right: 40%;
     font-family: Verdana;
-    text-align: center;
-    padding-top: 15%;
-    font-size:xx-large;
+    padding-top: 20px;
+    padding-left: 15%;
+    font-size:large;
     list-style-type: none;
     line-height: 170%;
     font-weight: bold;
+    background-color: rgb(214, 214, 223);
     
 }
 .samples{
     font-family: Verdana;
     text-decoration: none;
+    background-color: rgb(214, 214, 223);
+    color: black;
+    border-radius: 20px;
+    width: 100px;
+    padding: 5px;
+    margin-top: 10px;
 }
 .special{
     padding-top: 0%;
+}
+
+#choose{
+    margin-left: 15%;
+    margin-right: 40%;
+    margin-top: 15%;
+    font-family: Verdana;
+    text-decoration: none;
+    background-color: rgb(63, 63, 202);
+    color: white;
+    padding: 5px;
+    border: solid;
 }
