--- a/index.css
+++ b/index.css
@@ -159,13 +159,24 @@
   button[type="submit"] {
     padding: 10px 20px;
     border-radius: 10px;
-    background-color: #f7efe5;
-    color: #674188;
+    background-color: rgb(63, 63, 202);
+    color: #ffffff;
     border: none;
     font-size: 1rem;
     font-weight: bold;
   }
 
+  .button1{
+    padding: 10px 20px;
+    margin-top: 5%;;
+    border-radius: 10px;
+    background-color: rgb(63, 63, 202);
+    color: #ffffff;
+    border: none;
+    font-size: 1rem;
+    float:right;
+    font-weight: bold;
+  }
   
   .user-message {
     font-family: "Nunito", sans-serif;
